[package]
name = "leetcode-rust"
version = "0.1.0"
edition = "2021"
authors = ["zhenwei.jia1@gmail.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "leetcode-rust"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
postgres = "0.19.5"
